--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,8 @@
   scroll-behavior: smooth;
 }
 
-.container {
+.containers {
+  width: 1280px;
   margin: 0 auto;
   padding: 0 20px;
 }/*# sourceMappingURL=main.css.map */
